<resources>
    <string name="app_name">ScoreBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="teacher_code">شماره استاد</string>
    <string name="submit">ثبت</string>
    <string name="class_code">کد ارائه</string>
    <string name="userName">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="confirm_password">تکرار رمز عبور</string>
    <string name="register">ثبت نام</string>
    <string name="userName_error">نام کاربری را وارد کنید</string>
    <string name="password_error">رمز عبور را وارد کنید</string>
    <string name="confirm_password_error">تکرار رمز عبور را وارد کنید</string>
    <string name="complete_fields">لطفا اطلاعاتی درخواستی را تکمیل کنید</string>
    <string name="confirm_password_wrong">رمز عبور شما مطابقت ندارد</string>
    <string name="password_length">حداقل 8 کاراکتر</string>
    <string name="teacher_data">اطلاعات تکمیلی استاد</string>
    <string name="class_name">نام کلاس</string>
    <string name="class_day">انتخاب روز کلاس</string>
    <string name="time">انتخاب زمان شروع کلاس</string>
    <string name="selected_time">زمان انتخابی شما</string>
    <string name="choose_hour">زمان شروع کلاس را انتخاب کنید</string>
    <string name="class_name_error">نام کلاس را وارد کنید</string>
    <string name="student_add">افزودن دانش آموز</string>
    <string name="firstName_error">نام را وارد کنید</string>
    <string name="student_code">شماره دانشجویی</string>
</resources>
