<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/class_name"
        android:inputType="textPhonetic"
        android:maxLength="15"


        />


    <EditText
        android:id="@+id/edt_class_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/class_code"
        android:inputType="numberDecimal"
        android:maxLength="20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        >


        <Spinner
            android:id="@+id/spn_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_day"
            android:layout_margin="4dp"
            >

        </TextView>
    </LinearLayout>


    <Button
        android:id="@+id/btn_select_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="4dp"
        android:text="@string/time"

        android:onClick="OnSelectTime"

        >

    </Button>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center"

        ></TextView>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSubmit"
        android:text="@string/submit" />
</LinearLayout>